--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "sympy>=1.14.0",
+    "gmpy2>=2.2.1",
 ]
 
 [tool.ruff]
